--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hamsterwars",
   "version": "0.1.0",
   "private": true,
+  "homepage" : ".",
   "proxy": "http://localhost:1995",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,9 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node backend/server.js",
     "build": "react-scripts build",
-    "start-frontend": "react-scripts start",
+    "start-frontend-dev": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
